# OpenTill

./: .classpath  .gitignore  .project  LabelPrint.py  README.md  dashboard.php  index.php  labels.php  login.php  refill.php  takings.php
rust/: .env  .gitignore  Cargo.toml  rocket.toml
rust/data/: database.sqlite3
rust/emails/: message_recieved.html  message_recieved.mjml
rust/input_templates/: index.html.hbs
rust/input_templates/modals/: createDepartment.hbs  newProduct.hbs  orderModal.hbs  productModal.hbs  takings.hbs
rust/migrations/2019-05-13-010210_create_products/: up.sql
rust/src/: config.rs  email.rs  format.rs  lib.rs  listener.rs  main.rs  model.rs  models.rs  network_broadcast.rs  schema.rs  sender.rs  template_manager.rs  utils.rs
rust/src/barcodes/: country_codes.rs
rust/src/configuration/: AppConfiguration.rs  mod.rs
rust/src/controllers/: AuthController.rs  CaseController.rs  DepartmentController.rs  IndexController.rs  LanguageController.rs  ProductController.rs  ServerController.rs  SupplierController.rs  TransactionController.rs  UserController.rs  mod.rs
rust/src/migrations/: mod.rs
rust/src/models/: Case.rs  Database.rs  Department.rs  EmailTemplate.rs  GlobalProduct.rs  Language.rs  LoginAttempt.rs  Product.rs  Server.rs  Supplier.rs  TemplateContent.rs  Transaction.rs  User.rs  Version.rs  mod.rs
rust/src/responses/: CustomResponse.rs  mod.rs
rust/src/serialiser/: date_serialiser.rs
rust/temp/: Cheese.lbx  Unknown Product.lbx  test_item.lbx  versions.csv
rust/templates/: dashboard.html.hbs  index.html.hbs  index2.html.hbs  login.html.hbs
rust/web/: dashboard2.html  forgotPassword.html  index.html  insertCase.html  labels.html  login.html  resetPassword.html
rust/web/css/: index.css  login.css  products.css
rust/web/interpreter/: interpreter.js
rust/web/js/: cash_register.js  cash_register_mithril.js  createOffer.js  dashboard-old.js  dashboard.js  inventory-old.js  inventory.js  label.js  login.js  operators.js  orders.js  product.js  product_class.js  transaction_class.js  translate.js  utils.js
rust/web/modals/: caseModal.jsp  chat.jsp  createOperator.jsp  export-inventory.jsp  (+1 more)
(+335 files in other folders)
