[package]
name = "open_till"
version = "0.1.0"
authors = ["Ionman64 <PeterPickerill2014@gmail.com>"]

[dependencies]
rocket = "0.4.1"
rocket_contrib = {version = "0.4.1", features = ["handlebars_templates"]}
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
dotenv = "0.9.0"
reqwest = "0.9.15"
dirs = "1.0"
log = "0.4"
fern = "0.5"
qrcodegen = "1.4.0"
zip = "0.5.2"
blake2 = "0.8"
rand = "0.6.5"
serde = "1.0.91"
notifica = "1.0.2"
printpdf = "0.2.10"
csv = "1.0.7"